@@ -335,7 +335,7 @@ let max_register_pressure = function
 let op_is_pure = function
   | Icall_ind | Icall_imm _ | Itailcall_ind | Itailcall_imm _
   | Iextcall _ | Istackoffset _ | Istore _ | Ialloc _
-  | Iintop(Icheckbound) | Iintop_imm(Icheckbound, _)
+  | Iintop(Icheckbound) | Iintop_imm(Icheckbound, _) | Iopaque
   | Ispecific(Ishiftcheckbound _) -> false
   | _ -> true
 
