@@ -165,6 +165,7 @@ and operation =
   | Ccmpf of float_comparison
   | Craise of Lambda.raise_kind
   | Ccheckbound
+  | Copaque
 
 type expression =
     Cconst_int of int * Debuginfo.t
